# sadx-mod-linux-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: mod.ini
cmake/toolchains/: mingw32.cmake
lib/sadx-mod-loader-linux-compatible/: FunctionHook.h  MemAccess.h  SADXFunctions.h  SADXFunctionsNew.h  SADXVariables.h  UsercallFunctionHandler.h
lib/windows-header-fix/: UsercallFunctionHandler.h  Windows.h
src/: mod.cpp
